So input rules are set.. need to build the rule string for the rule handler for the classes when they generate. Processors might be getting removed since input rules are handling that, especially is mysql data types can build those rules based off db

--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,9 @@
 	"name": "yohns/validate",
 	"description": "Currently validating mysql column data types to use before inserting or updating, and maybe searching the database",
 	"require": {
+		"php": ">=8.3",
 		"yohns/config": "^1.0",
-		"yohns/lang": "^0.1.1"
+		"yohns/lang": "^0.1"
 	},
 	"license": "MIT",
 	"autoload": {
